--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -8,6 +8,8 @@ Much of this work was done in my office at Mount Stromlo while I bothered my off
 
 Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters.
 
+A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, and Eloise Birchall.
+
 Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, and Jakub Nabaglo; for their emotional support through my PhD.
 
 \clearpage
