--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -4974,3 +4974,162 @@ Publisher: Nature Publishing Group},
 	pages = {52},
 	file = {Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:C\:\\Users\\matthew\\Zotero\\storage\\ZAJEUQWM\\Menon - Learning from Corrupted Binary Labels via Class-Pr.pdf:application/pdf}
 }
+
+@article{reiprich_abell_2020,
+	title = {The {Abell} 3391/95 galaxy cluster system. {A} 15 {Mpc} intergalactic medium emission filament, a warm gas bridge, infalling matter clumps, and (re-) accelerated plasma discovered by combining {SRG}/{eROSITA} data with {ASKAP}/{EMU} and {DECam} data},
+	copyright = {© 2020, ESO},
+	issn = {0004-6361, 1432-0746},
+	url = {https://www.aanda.org/articles/aa/abs/forth/aa39590-20/aa39590-20.html},
+	doi = {10.1051/0004-6361/202039590},
+	abstract = {Astronomy \& Astrophysics (A\&A) is an international journal which publishes papers on all aspects of astronomy and astrophysics},
+	language = {en},
+	urldate = {2021-01-18},
+	journal = {Astronomy \& Astrophysics},
+	author = {Reiprich, T. H. and Veronica, A. and Pacaud, F. and Ramos-Ceja, M. E. and Ota, N. and Sanders, J. and Kara, M. and Erben, T.},
+	month = dec,
+	year = {2020},
+	note = {Publisher: EDP Sciences}
+}
+
+@article{bosch-ramon_role_2018,
+	title = {The role of {AGN} jets in the reionization epoch},
+	volume = {617},
+	copyright = {© ESO 2018},
+	issn = {0004-6361, 1432-0746},
+	url = {https://www.aanda.org/articles/aa/abs/2018/09/aa33952-18/aa33952-18.html},
+	doi = {10.1051/0004-6361/201833952},
+	abstract = {The reionization of the Universe ends the dark ages that started after the recombination era. In the case of H, reionization finishes around {\textless}i{\textgreater}z{\textless}i/{\textgreater} {\textasciitilde} 6. Faint star-forming galaxies are the best candidate sources of the H-ionizing radiation, although active galactic nuclei may have also contributed. We have explored whether the termination regions of the jets from active galactic nuclei may have contributed significantly to the ionization of H in the late reionization epoch, around {\textless}i{\textgreater}z{\textless}i/{\textgreater} {\textasciitilde} 6−7. We assumed that, as it has been proposed, active galactic nuclei at {\textless}i{\textgreater}z{\textless}i/{\textgreater} {\textasciitilde} 6 may have presented a high jet fraction, accretion rate, and duty cycle, and that non-thermal electrons contribute significantly to the pressure of jet termination regions. Empirical black-hole mass functions were adopted to characterize the population of active galactic nuclei. From all this, estimates were derived for the isotropic H-ionizing radiation produced in the jet termination regions, at {\textless}i{\textgreater}z{\textless}i/{\textgreater} {\textasciitilde} 6, through inverse Compton scattering off CMB photons. We find that the termination regions of the jets of active galactic nuclei may have radiated most of their energy in the form of H-ionizing radiation at {\textless}i{\textgreater}z{\textless}i/{\textgreater} {\textasciitilde} 6. For typical black-hole mass functions at that redshift, under the considered conditions (long-lasting, common, and very active galactic nuclei with jets), the contribution of these jets to maintain (and possibly enhance) the ionization of H may have been non-negligible. We conclude that the termination regions of jets from active galactic nuclei could have had a significant role in the reionization of the Universe at {\textless}i{\textgreater}z{\textless}i/{\textgreater} ≳ 6.},
+	language = {en},
+	urldate = {2021-01-24},
+	journal = {Astronomy \& Astrophysics},
+	author = {Bosch-Ramon, V.},
+	month = sep,
+	year = {2018},
+	note = {Publisher: EDP Sciences},
+	pages = {L3},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\HDBNXH3V\\Bosch-Ramon - 2018 - The role of AGN jets in the reionization epoch.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\8J82J7RY\\aa33952-18.html:text/html}
+}
+
+@article{morganti_many_2017,
+	title = {The {Many} {Routes} to {AGN} {Feedback}},
+	volume = {4},
+	issn = {2296-987X},
+	url = {https://www.frontiersin.org/articles/10.3389/fspas.2017.00042/full},
+	doi = {10.3389/fspas.2017.00042},
+	abstract = {The energy released by Active Galactic Nuclei (AGN) in the form of radiation, winds or radio plasma jets, is known to impact on the surrounding interstellar medium. The result of these processes, known as AGN (negative) feedback, is suggested to prevent gas, in and around galaxies, from cooling, and to remove, or at least redistribute, gas by driving massive and fast outflows, hence playing a key role in galaxy evolution. Given its importance, a large effort is devoted by the astronomical community to trace the effects of AGN on the surrounding gaseous medium and to quantify their impact for different types of AGN. This review briefly summarizes some of the recent observational results obtained in different wavebands, tracing different phases of the gas. I also summarise new insights they have brought, and the constraints they provide to numerical simulations of galaxy formation and evolution. The recent addition of deep observations of cold gas and, in particular, of cold molecular gas, has brought some interesting surprises and has expanded our understanding of AGN and AGN feedback.},
+	language = {English},
+	urldate = {2021-01-24},
+	journal = {Frontiers in Astronomy and Space Sciences},
+	author = {Morganti, Raffaella},
+	year = {2017},
+	note = {Publisher: Frontiers},
+	keywords = {active galactic nuclei, extragalactic radio jets, Interstellar Medium, Outflows, spectroscopy},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\XDQCZPCF\\Morganti - 2017 - The Many Routes to AGN Feedback.pdf:application/pdf}
+}
+
+@article{husemann_reality_2018,
+	title = {Reality and myths of {AGN} feedback},
+	volume = {2},
+	copyright = {2018 The Author(s)},
+	issn = {2397-3366},
+	url = {https://www.nature.com/articles/s41550-018-0407-2},
+	doi = {10.1038/s41550-018-0407-2},
+	abstract = {Feedback from active galactic nuclei (AGNs) remains controversial despite its wide acceptance as necessary to regulate massive galaxy growth. Consequently, we held a workshop in October 2017, at Leiden’s Lorentz Center, to distinguish between the reality and myths of feedback.},
+	language = {en},
+	number = {3},
+	urldate = {2021-01-24},
+	journal = {Nature Astronomy},
+	author = {Husemann, Bernd and Harrison, Chris M.},
+	month = mar,
+	year = {2018},
+	note = {Number: 3
+Publisher: Nature Publishing Group},
+	pages = {196--197},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\VSDZQAYC\\Husemann and Harrison - 2018 - Reality and myths of AGN feedback.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\MWLCDZ36\\s41550-018-0407-2.html:text/html}
+}
+
+@article{hardcastle_radio_2020-1,
+	title = {Radio galaxies and feedback from {AGN} jets},
+	volume = {88},
+	issn = {1387-6473},
+	url = {http://www.sciencedirect.com/science/article/pii/S1387647320300166},
+	doi = {10.1016/j.newar.2020.101539},
+	abstract = {We review current understanding of the population of radio galaxies and radio-loud quasars from an observational perspective, focusing on their large-scale structures and dynamics. We discuss the physical conditions in radio galaxies, their fuelling and accretion modes, host galaxies and large-scale environments, and the role(s) they play as engines of feedback in the process of galaxy evolution. Finally we briefly summarise other astrophysical uses of radio galaxy populations, including the study of cosmic magnetism and cosmological applications, and discuss future prospects for advancing our understanding of the physics and feedback behaviour of radio galaxies.},
+	language = {en},
+	urldate = {2021-01-24},
+	journal = {New Astronomy Reviews},
+	author = {Hardcastle, M. J. and Croston, J. H.},
+	month = jun,
+	year = {2020},
+	pages = {101539},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\MPDP3W8T\\Hardcastle and Croston - 2020 - Radio galaxies and feedback from AGN jets.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\AZTQTZNL\\S1387647320300166.html:text/html}
+}
+
+@article{morganti_many_2017-1,
+	title = {The {Many} {Routes} to {AGN} {Feedback}},
+	volume = {4},
+	issn = {2296-987X},
+	url = {http://journal.frontiersin.org/article/10.3389/fspas.2017.00042/full},
+	doi = {10.3389/fspas.2017.00042},
+	abstract = {The energy released by Active Galactic Nuclei (AGN) in the form of radiation, winds or radio plasma jets, is known to impact on the surrounding interstellar medium. The result of these processes, known as AGN (negative) feedback, is suggested to prevent gas, in and around galaxies, from cooling, and to remove, or at least redistribute, gas by driving massive and fast outflows, hence playing a key role in galaxy evolution. Given its importance, a large effort is devoted by the astronomical community to trace the effects of AGN on the surrounding gaseous medium and to quantify their impact for different types of AGN. This review briefly summarizes some of the recent observational results obtained in different wavebands, tracing different phases of the gas. I also summarise the new insights they have brought, and the constraints they provide to numerical simulations of galaxy formation and evolution. The recent addition of deep observations of cold gas and, in particular, of cold molecular gas, has brought some interesting surprises and has expanded our understanding of AGN and AGN feedback.},
+	language = {en},
+	urldate = {2021-01-24},
+	journal = {Frontiers in Astronomy and Space Sciences},
+	author = {Morganti, Raffaella},
+	month = nov,
+	year = {2017},
+	pages = {42},
+	file = {Morganti - 2017 - The Many Routes to AGN Feedback.pdf:C\:\\Users\\matthew\\Zotero\\storage\\NRXLBF3U\\Morganti - 2017 - The Many Routes to AGN Feedback.pdf:application/pdf}
+}
+
+@article{reiprich_abell_2020-1,
+	title = {The {Abell} 3391/95 galaxy cluster system. {A} 15 {Mpc} intergalactic medium emission filament, a warm gas bridge, infalling matter clumps, and (re-) accelerated plasma discovered by combining {SRG}/{eROSITA} data with {ASKAP}/{EMU} and {DECam} data},
+	copyright = {© 2020, ESO},
+	issn = {0004-6361, 1432-0746},
+	url = {https://www.aanda.org/articles/aa/abs/forth/aa39590-20/aa39590-20.html},
+	doi = {10.1051/0004-6361/202039590},
+	abstract = {Astronomy \& Astrophysics (A\&A) is an international journal which publishes papers on all aspects of astronomy and astrophysics},
+	language = {en},
+	urldate = {2021-01-24},
+	journal = {Astronomy \& Astrophysics},
+	author = {Reiprich, T. H. and Veronica, A. and Pacaud, F. and Ramos-Ceja, M. E. and Ota, N. and Sanders, J. and Kara, M. and Erben, T.},
+	month = dec,
+	year = {2020},
+	note = {Publisher: EDP Sciences},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\BI258EHE\\Reiprich et al. - 2020 - The Abell 339195 galaxy cluster system. A 15 Mpc .pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\MDFYEJ3F\\article.html:text/html}
+}
+
+@article{panwar_alignment_2020,
+	title = {Alignment of {Radio} {Galaxy} {Axes} using {FIRST} {Catalogue}},
+	issn = {0035-8711, 1365-2966},
+	url = {http://arxiv.org/abs/2006.09779},
+	doi = {10.1093/mnras/staa2975},
+	abstract = {We study the alignment of radio galaxies axes using the FIRST catalogue. we impose several cuts in order to select the candidates which are most likely to be free of systematic bias. In our study we primarily focus on testing for alignment among sources within a certain angular separation from one another since for most sources redshift information is not available. We find a very significant effect for angular distances less than 1 degrees. The distance scale of alignment is found to be roughly 28 Mpc, in agreement with earlier estimates, assuming that these sources are dominantly at redshift of 0.8. However we are not able to entirely rule out the possibility of systematic bias in data. We also perform a full three dimensional analysis using a smaller data sample for which redshift information is available. In this case we only find a very weak signal at much larger distances.},
+	urldate = {2021-01-24},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Panwar, Mohit and Prabhakar and Sandhu, Pritpal Kaur and Wadadekar, Yogesh and Jain, Pankaj},
+	month = sep,
+	year = {2020},
+	note = {arXiv: 2006.09779},
+	keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+	pages = {staa2975},
+	file = {arXiv Fulltext PDF:C\:\\Users\\matthew\\Zotero\\storage\\6PDQ2ZTG\\Panwar et al. - 2020 - Alignment of Radio Galaxy Axes using FIRST Catalog.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\WG6A6Q9E\\2006.html:text/html}
+}
+
+@article{contigiani_radio_2017,
+	title = {Radio {Galaxy} {Zoo}: cosmological alignment of radio sources},
+	volume = {472},
+	issn = {0035-8711},
+	shorttitle = {Radio {Galaxy} {Zoo}},
+	url = {https://doi.org/10.1093/mnras/stx1977},
+	doi = {10.1093/mnras/stx1977},
+	abstract = {We study the mutual alignment of radio sources within two surveys, Faint Images of the Radio Sky at Twenty-centimetres (FIRST) and TIFR GMRT Sky Survey (TGSS). This is done by producing two position angle catalogues containing the preferential directions of respectively 30 059 and 11 674 extended sources distributed over more than 7000 and 17 000 deg2. The identification of the sources in the FIRST sample was performed in advance by volunteers of the Radio Galaxy Zoo (RGZ) project, while for the TGSS sample it is the result of an automated process presented here. After taking into account systematic effects, marginal evidence of a local alignment on scales smaller than 2.5 deg is found in the FIRST sample. The probability of this happening by chance is found to be less than 2 per cent. Further study suggests that on scales up to 1.5 deg the alignment is maximal. For one third of the sources, the RGZ volunteers identified an optical counterpart. Assuming a flat Λ cold dark matter cosmology with \${\textbackslash}Omega \_m = 0.31, {\textbackslash}Omega \_{\textbackslash}Lambda = 0.69\$, we convert the maximum angular scale on which alignment is seen into a physical scale in the range [19, 38] Mpc \$h\_\{70\}{\textasciicircum}\{-1\}\$. This result supports recent evidence reported by Taylor and Jagannathan of radio jet alignment in the 1.4 deg2 ELAIS N1 field observed with the Giant Metrewave Radio Telescope. The TGSS sample is found to be too sparsely populated to manifest a similar signal.},
+	number = {1},
+	urldate = {2021-01-24},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Contigiani, O. and de Gasperin, F. and Miley, G. K. and Rudnick, L. and Andernach, H. and Banfield, J. K. and Kapińska, A. D. and Shabala, S. S. and Wong, O. I.},
+	month = nov,
+	year = {2017},
+	pages = {636--646},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\FF59MD62\\Contigiani et al. - 2017 - Radio Galaxy Zoo cosmological alignment of radio .pdf:application/pdf}
+}
